# PokeFier-V3

./: Main.py  README.md  app.py  pyproject.toml  requirements.txt
data/: config.json  pokemon
handler/: command.py
handlers/: catcher.py  commands.py  misceleneous.py  shards.py  trades.py
source/: Config.json  Utilities.py
utilities/: poke_identify.py
