[project]
name = "pokefier-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py-self>=2.0.0",
    "discord-webhook>=1.3.1",
    "logging>=0.4.9.6",
    "numpy>=2.0.2",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.6",
    "tensorflow>=2.18.0",
]
